cfn/sg.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security Group Template For Web
Parameters:
  ProjectName:
    Type: String
    Default: demo
    Description: Project name

Resources:
  ##############################
  # SecurityGroup
  ##############################
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-vpc" }
      GroupDescription: Security group for ALB (http/https)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-alb-sg"

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-vpc" }
      GroupDescription: Security group for Web (Application)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          SourceSecurityGroupId: !Ref "ALBSecurityGroup"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-web-sg"

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-vpc" }
      GroupDescription: Security group for RDS
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "3306"
          ToPort: "3306"
          SourceSecurityGroupId: !Ref "WebSecurityGroup"
        - IpProtocol: tcp
          FromPort: "3306"
          ToPort: "3306"
          SourceSecurityGroupId: !Ref "BastionSecurityGroup"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-rds-sg"

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-vpc" }
      GroupDescription: Security group for Bastion
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-bastion-sg"

Outputs:
  ALBSecurityGroup:
    Value: !Ref "ALBSecurityGroup"
    Export:
      Name: !Sub "${ProjectName}-alb-sg"
  WebSecurityGroup:
    Value: !Ref "WebSecurityGroup"
    Export:
      Name: !Sub "${ProjectName}-web-sg"
  RDSSecurityGroup:
    Value: !Ref "RDSSecurityGroup"
    Export:
      Name: !Sub "${ProjectName}-rds-sg"
  BastionSecurityGroup:
    Value: !Ref "BastionSecurityGroup"
    Export:
      Name: !Sub "${ProjectName}-bastion-sg"
